# rust-graphql-example

./: Cargo.toml  README.md  schema.graphql
migrations/: 0001_todos.sql
src/: graphql.rs  main.rs
