[package]
name = "rust-graphql-example"
version = "0.1.0"
authors = ["Jordan Shaw <jordanshaw86@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1"
dotenv = "0.15"
async-std = { version = "1.6.3", features = ["attributes"] }
async-graphql = "1.17.2"
async-graphql-tide = "1.17.9"
tide = "0.13"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "mysql", "macros" ] }


[dev-dependencies]
assert-json-diff = "1"
diesel-factories = "1"
