[package]
name = "rust-graphql-example"
version = "0.1.0"
authors = ["Jordan Shaw <jordanshaw86@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.8.0"
serde_json = "1"
dotenv = "0.15"
async-std = "1.9.0"
tide = "0.16.0"
async-graphql = { version = "2.9.6", features = ["dataloader"] }
async-graphql-tide = "2.9.6"
async-trait = "0.1.42"
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-async-std-rustls", "postgres", "macros" ] }


[dev-dependencies]
assert-json-diff = "1"
diesel-factories = "1"
